terraform-kubernetes-deployments-core/manifests/argocd-configuration/0.0.1/manifests.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: ${ argocd_ingress_class_name }
  rules:
  - host: ${ argocd_hostname }
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              name: https
  tls:
  - hosts:
    - ${ argocd_hostname }
    secretName: argocd-secret
